--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "hooplead",
   "version": "0.1.0",
   "private": true,
-  "main": "server/index.js",
+  "main": "server/server.js",
+  "proxy": "http://localhost:4040",
   "dependencies": {
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "chart.js": "^2.8.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
@@ -13,6 +16,7 @@
     "moment": "^2.24.0",
     "nodemailer": "^6.3.0",
     "react": "^16.9.0",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
